--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1703,6 +1703,7 @@ input[type=checkbox]:checked + .pseudocheckbox::before {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  width: 100%;
   margin: 0;
 }
 
